--- a/projects/arduino/quadrupod.html
+++ b/projects/arduino/quadrupod.html
@@ -16,7 +16,7 @@ layout: default
 
 <p>Here is what it looked like mid way through programming the arduino:</p>
 
-<img src="https://lh3.googleusercontent.com/rwYN5N9njYHXcftaKt0dVYMhFRQ_09GHP11ON4FA_SLJFLEDdRCtxEg8Rkvm-7qgF1ydkzz3IqVR_w0jvJrEO2OsrAc5tTFhWJYC1KjfwtaQ1-9lat_c516PaQRZPjU-y2zcp-YK3zva-1b4sEAkChicopL5XNkEkgMpmUcyrQNaDlkoVJ10pYak5W76F9jKK6Qepejm4qcNoED8EAvvmy2V32QEcMxoaFKIIU40KWwrCT1Qgo8k-l2aAjLMtwzjmXlYHhBN0aqHfMylgXJ_HUiYfJ8GQVnjeMyVaJCdbIHzfLi0CgZhqPvWVEMnGPVUVBNmhbWo14vYnM3c47PVxZelrXUMzT7W684BzqSdJLUjt83KYsTGnJJp1p1p4TNBs-T3YcbEmQTa_JBynxYI2Afm6oPqytq38VV4kpab3WHCy7Mta27c0QzJIxPQwi6Q9lkq7bckdvxJBK_QLnrIZr3bOLVAQcQG8OJ62MS7DXf5Tp5JVV-HlQ5s0YTBROrnvldkBY39PqHlyH628zBmrbFA7cCoWtpN4VC0-4447w6Yd3MVAEXNtP3iT5QUQy0=s834-w834-h625-no"></img>
+<img src='/images/quadropod/quadropod.jpg'></img>
 
 <p>Unforunately I did not get a video of it walking at this stage as I made a change to the design after a couple of tests. As you can see in the image above, the sensor is fixed to the main body of the robot so it cannot sense to the sides. I originally thought that this would be good enough as the sensor is meant to have a 15deg field of view. However, it was not quite enough and would often miss an obstacle and clip it with one of the front legs.</p>
 
