re-worded homepage

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@ layout: default
 <h1>Hi,</h1>
 
 <p>
-My name is Joe, and this website is the home to my projets.
+My name is Joe, and this website is home to my projets.
 </p>
 
 <p>
-Use the top navigation tabs to explore the site - in particular the <code>about</code> section for something on me.
+Use the top navigation tabs to explore the site. The <code>about</code> section has something on me and the site's creation.
 </p>
 
 <hr>
 
-<h3>Requesting Feedback</h3>
+<h3>Send me a message?</h3>
 
 <p>
-Since I haven't posted any contact details, there is no method for any comments/suggestions on any of my work. Yes I could use a third-party like Disqus, but services which require you to sign-in discourage me from dropping a short comment (also I like to write everyhing myself), so instead I wrote a short (like <code>30</code> line) HTTPS server that accepts the POST requests which you send below, and writes them to a log.
+Since I haven't posted any contact details, there is no means of communication here at the moment. Yes I could use a third-party like Disqus, but I find services that require me to login/create an account discourage me from dropping a short comment. So in addition to the fact that I like to write everything myself, I wrote a short (like <code>30</code> line) <a href='https://github.com/joeiddon/simplex'>HTTPS server</a> that accepts POST requests sent from below and rights them to a log.
 </p>
 
 <p>
-Type what you want in the text area below, click the <code>send</code> button, and I'll read it!
+Type what you want in the text area below, click <code>send</code>, and I'll read it!
 </p>
 
 <textarea id='input' style='width:500px; height:100px;'></textarea>
@@ -31,7 +31,7 @@ Type what you want in the text area below, click the <code>send</code> button, a
 </div>
 
 <p><em>
-Note that this is merely simplex communication. I.e. you can send me messages, but I can't send you anything. Of course, if you were to send an email address or similar, I could get back to you.
+Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. Of course, if you were to send an email address or similar, I could get back to you.
 </em></p>
 
 <hr>
