re-word homepage

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ Note that this is merely simplex communication. I.e. you can send me messages, b
 <hr>
 
 <p>
-Finally, to increase the cat to non-cat content on the web, here's mine:
+Finally, to increase the cat to non-cat content on the web, here are mine:
 </p>
 
 <img class='half_img' src='/images/cats/wisps.jpg'></img
