blocks post and updated simulating threed post

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -42,8 +42,8 @@ layout: default
       </a>
     </td>
     <td>
-      <a href='chase'>
-      <img class='project_img' src='/images/thumbnails/chase.jpg'></img>
+      <a href='blocks'>
+      <img class='project_img' src='/images/thumbnails/blocks.jpg'></img>
       </a>
     </td>
   </tr>
@@ -93,6 +93,13 @@ layout: default
     <td>
       <a href='ball'>
       <img class='project_img' src='/images/thumbnails/ball.png'></img>
+      </a>
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <a href='chase'>
+      <img class='project_img' src='/images/thumbnails/chase.jpg'></img>
       </a>
     </td>
   </tr>
