updated front page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,38 @@ layout: default
 <h1>Hi,</h1>
 
 <p>
-My name is Joe, and this website is home to my projets.
+My name is Joe, and this website is home to my projects.
 </p>
 
 <p>
-Use the top navigation tabs to explore the site. The <code>about</code> section has something on me and the site's creation.
+Use the tabs at the top to navigate the site. The "about" tab has something about me and the making of this site.
 </p>
+
+<hr>
+
+<h3>My Favourite Projects</h3>
+
+<p>
+If your only here for a quick browse, I thought I'd save you some time by compiling my top few projects. They are:
+</p>
+
+<ul>
+<li><a href='/quadrupod'>quadrupod</a> - a four legged robot that can explore;</li>
+<li><a href='/projects/javascript/blocks'>blocks</a> - a minecraft-like multiplayer game that runs in the browser;</li>
+<li><a href='/projects/javascript/chess'>chess</a> - a chess AI written in JavaScript.</li>
+</ul>
+
+<p>
+Having already processed nearly 5 sentences, I'd like to already thank you for reading my work and I hope you enjoy the posts.
+</p>
+
+<hr>
+
+<h3>Coming soon...</h3>
+
+<p>Here's a little teaser, for a <a href='https://github.com/joeiddon/chess_robot'>big project</a>.</p>
+
+<video src='/videos/chess_robot/teaser.mp4' controls></video>
 
 <hr>
 
