broken link fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ If your only here for a quick browse, I thought I'd save you some time by compil
 </p>
 
 <ul>
-<li><a href='/quadrupod'>quadrupod</a> - a four legged robot that can explore;</li>
+<li><a href='/projects/arduino/quadrupod'>quadrupod</a> - a four legged robot that can explore;</li>
 <li><a href='/projects/javascript/blocks'>blocks</a> - a minecraft-like multiplayer game that runs in the browser;</li>
 <li><a href='/projects/javascript/chess'>chess</a> - a chess AI written in JavaScript.</li>
 </ul>
