formatting changes, especially for phones

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Since I haven't posted any contact details, there is no means of communication h
 Type what you want in the text area below, click <code>send</code>, and I'll read it!
 </p>
 
-<textarea id='input' style='width:500px; height:100px;'></textarea>
+<textarea id='input' style='width:50%;height:100px;'></textarea>
 <div>
   <input type='button' id='button' value='send'></input>
   <div id='status' style='color:orange;display:inline-block;'>status: awaiting</div>
