--- a/tree.html
+++ b/tree.html
@@ -36,12 +36,19 @@
 	│   ├── <a href="./club/log.html">log.html</a><br>
 	│   └── <a href="./club/snake.html">snake.html</a><br>
 	├── <a href="./images/">images</a><br>
+	│   ├── <a href="./images/balancing_robot/">balancing_robot</a><br>
+	│   │   ├── <a href="./images/balancing_robot/a4988.jpg">a4988.jpg</a><br>
+	│   │   ├── <a href="./images/balancing_robot/driver_board.jpg">driver_board.jpg</a><br>
+	│   │   ├── <a href="./images/balancing_robot/frame.jpg">frame.jpg</a><br>
+	│   │   ├── <a href="./images/balancing_robot/layers.jpg">layers.jpg</a><br>
+	│   │   └── <a href="./images/balancing_robot/lipo.jpg">lipo.jpg</a><br>
 	│   ├── <a href="./images/bitcoin/">bitcoin</a><br>
 	│   │   ├── <a href="./images/bitcoin/bottom.jpg">bottom.jpg</a><br>
 	│   │   ├── <a href="./images/bitcoin/front.jpg">front.jpg</a><br>
 	│   │   ├── <a href="./images/bitcoin/lipo.jpg">lipo.jpg</a><br>
 	│   │   ├── <a href="./images/bitcoin/side.jpg">side.jpg</a><br>
 	│   │   └── <a href="./images/bitcoin/top.jpg">top.jpg</a><br>
+	│   ├── <a href="./images/block/">block</a><br>
 	│   ├── <a href="./images/cats/">cats</a><br>
 	│   │   ├── <a href="./images/cats/cats.jpg">cats.jpg</a><br>
 	│   │   ├── <a href="./images/cats/kitkat.jpg">kitkat.jpg</a><br>
@@ -50,8 +57,9 @@
 	│   │   └── <a href="./images/cats/wisps_wrong_aspect_ratio.jpg">wisps_wrong_aspect_ratio.jpg</a><br>
 	│   ├── <a href="./images/club/">club</a><br>
 	│   │   ├── <a href="./images/club/cars/">cars</a><br>
+	│   │   │   ├── <a href="./images/club/cars/batteries.jpg">batteries.jpg</a><br>
+	│   │   │   ├── <a href="./images/club/cars/controller.jpg">controller.jpg</a><br>
 	│   │   │   ├── <a href="./images/club/cars/initials.jpg">initials.jpg</a><br>
-	│   │   │   ├── <a href="./images/club/cars/laser_cut_pieces.jpg">laser_cut_pieces.jpg</a><br>
 	│   │   │   ├── <a href="./images/club/cars/laser_cut_side.jpg">laser_cut_side.jpg</a><br>
 	│   │   │   ├── <a href="./images/club/cars/laser_cutter.jpg">laser_cutter.jpg</a><br>
 	│   │   │   ├── <a href="./images/club/cars/laser_cutting.jpg">laser_cutting.jpg</a><br>
@@ -82,15 +90,19 @@
 	│   │   ├── <a href="./images/profiles/github.png">github.png</a><br>
 	│   │   ├── <a href="./images/profiles/stack.png">stack.png</a><br>
 	│   │   └── <a href="./images/profiles/thingiverse.png">thingiverse.png</a><br>
+	│   ├── <a href="./images/quadrupod/">quadrupod</a><br>
+	│   │   └── <a href="./images/quadrupod/quadrupod.jpg">quadrupod.jpg</a><br>
 	│   ├── <a href="./images/sierpinski_curves/">sierpinski_curves</a><br>
 	│   │   ├── <a href="./images/sierpinski_curves/four.jpg">four.jpg</a><br>
 	│   │   ├── <a href="./images/sierpinski_curves/one.jpg">one.jpg</a><br>
 	│   │   ├── <a href="./images/sierpinski_curves/three.jpg">three.jpg</a><br>
 	│   │   └── <a href="./images/sierpinski_curves/two.jpg">two.jpg</a><br>
 	│   ├── <a href="./images/thumbnails/">thumbnails</a><br>
+	│   │   ├── <a href="./images/thumbnails/balancing_robot.jpg">balancing_robot.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/ball.png">ball.png</a><br>
 	│   │   ├── <a href="./images/thumbnails/balls.jpg">balls.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/bitcoin.jpg">bitcoin.jpg</a><br>
+	│   │   ├── <a href="./images/thumbnails/blocks.jpg">blocks.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/chase.jpg">chase.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/chess.jpg">chess.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/floodfill.png">floodfill.png</a><br>
@@ -142,6 +154,7 @@
 	│   └── <a href="./_layouts/default.html">default.html</a><br>
 	├── <a href="./projects/">projects</a><br>
 	│   ├── <a href="./projects/arduino/">arduino</a><br>
+	│   │   ├── <a href="./projects/arduino/balancing_robot.html">balancing_robot.html</a><br>
 	│   │   ├── <a href="./projects/arduino/bitcoin.html">bitcoin.html</a><br>
 	│   │   ├── <a href="./projects/arduino/index.html">index.html</a><br>
 	│   │   ├── <a href="./projects/arduino/laser.html">laser.html</a><br>
@@ -151,6 +164,7 @@
 	│   ├── <a href="./projects/javascript/">javascript</a><br>
 	│   │   ├── <a href="./projects/javascript/ball.html">ball.html</a><br>
 	│   │   ├── <a href="./projects/javascript/balls.html">balls.html</a><br>
+	│   │   ├── <a href="./projects/javascript/blocks.html">blocks.html</a><br>
 	│   │   ├── <a href="./projects/javascript/chase.html">chase.html</a><br>
 	│   │   ├── <a href="./projects/javascript/chess.html">chess.html</a><br>
 	│   │   ├── <a href="./projects/javascript/game_of_life.html">game_of_life.html</a><br>
@@ -167,16 +181,20 @@
 	│   ├── <a href="./projects/other/">other</a><br>
 	│   │   ├── <a href="./projects/other/index.html">index.html</a><br>
 	│   │   └── <a href="./projects/other/useless_box.html">useless_box.html</a><br>
-	│   ├── <a href="./projects/index.html">index.html</a><br>
 	│   └── <a href="./projects/project.css">project.css</a><br>
 	├── <a href="./videos/">videos</a><br>
+	│   ├── <a href="./videos/chess_robot/">chess_robot</a><br>
+	│   │   └── <a href="./videos/chess_robot/teaser.mp4">teaser.mp4</a><br>
 	│   ├── <a href="./videos/club/">club</a><br>
 	│   │   ├── <a href="./videos/club/cars_laser_cutter.mp4">cars_laser_cutter.mp4</a><br>
+	│   │   ├── <a href="./videos/club/follow_car.mp4">follow_car.mp4</a><br>
 	│   │   ├── <a href="./videos/club/hexapod_first_movements.mp4">hexapod_first_movements.mp4</a><br>
 	│   │   ├── <a href="./videos/club/hexapod_laser_cutter.mp4">hexapod_laser_cutter.mp4</a><br>
 	│   │   ├── <a href="./videos/club/hexapod_walking.mp4">hexapod_walking.mp4</a><br>
 	│   │   ├── <a href="./videos/club/laser_cutter_overview.mp4">laser_cutter_overview.mp4</a><br>
+	│   │   ├── <a href="./videos/club/remote_car.mp4">remote_car.mp4</a><br>
 	│   │   └── <a href="./videos/club/snake_game.mp4">snake_game.mp4</a><br>
+	│   ├── <a href="./videos/balancing_robot.mp4">balancing_robot.mp4</a><br>
 	│   ├── <a href="./videos/chess_setup.mp4">chess_setup.mp4</a><br>
 	│   ├── <a href="./videos/laser_gate.mp4">laser_gate.mp4</a><br>
 	│   ├── <a href="./videos/led_grid_test.mp4">led_grid_test.mp4</a><br>
@@ -201,7 +219,7 @@
 	</p>
 	<p>
 
-22 directories, 146 files
+26 directories, 160 files
 	<br><br>
 	</p>
 	<hr>
