--- a/index.html
+++ b/index.html
@@ -32,19 +32,7 @@ Having already processed nearly 5 sentences, I'd like to already thank you for r
 
 <hr>
 
-<h3>Coming soon...</h3>
-
-<p>Here's a little teaser, for a <a href='https://github.com/joeiddon/chess_robot'>big project</a>.</p>
-
-<video src='/videos/chess_robot/teaser.mp4' controls></video>
-
-<hr>
-
-<h3>Send me a message?</h3>
-
-<p>
-Since I haven't posted any contact details, there is no means of communication here at the moment. Yes I could use a third-party like Disqus, but I find services that require me to login/create an account discourage me from dropping a short comment. So in addition to the fact that I like to write everything myself, I wrote a short (like <code>30</code> line) <a href='https://github.com/joeiddon/simplex'>HTTPS server</a> that accepts POST requests sent from below and rights them to a log.
-</p>
+<h3>Drop me a comment?</h3>
 
 <p>
 Type what you want in the text area below, click <code>send</code>, and I'll read it!
@@ -57,8 +45,14 @@ Type what you want in the text area below, click <code>send</code>, and I'll rea
 </div>
 
 <p><em>
-Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. Of course, if you were to send an email address or similar, I could get back to you.
+Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. Of course, if you were to send an email address or similar, I could get back to you. Source code: <a href='https://github.com/joeiddon/simplex'>HTTPS server</a>.
 </em></p>
+
+<h3>Coming soon...</h3>
+
+<p>Here's a little teaser, for a <a href='https://github.com/joeiddon/chess_robot'>big project</a>.</p>
+
+<video src='/videos/chess_robot/teaser.mp4' controls></video>
 
 <hr>
 
