--- a/tree.html
+++ b/tree.html
@@ -152,6 +152,9 @@
 	│   └── <a href="./images/tetra_logo.png">tetra_logo.png</a><br>
 	├── <a href="./_layouts/">_layouts</a><br>
 	│   └── <a href="./_layouts/default.html">default.html</a><br>
+	├── <a href="./misc/">misc</a><br>
+	│   ├── <a href="./misc/gsearchlinks.html">gsearchlinks.html</a><br>
+	│   └── <a href="./misc/README.md">README.md</a><br>
 	├── <a href="./projects/">projects</a><br>
 	│   ├── <a href="./projects/arduino/">arduino</a><br>
 	│   │   ├── <a href="./projects/arduino/balancing_robot.html">balancing_robot.html</a><br>
@@ -219,7 +222,7 @@
 	</p>
 	<p>
 
-26 directories, 160 files
+27 directories, 162 files
 	<br><br>
 	</p>
 	<hr>
