--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@ layout: default
 <h1>Hi,</h1>
 
 <p>
-My name is Joe, and this website is home to my projects.
+My name is Joe, I'm 16, and this website is home to my projects.
 </p>
 
 <p>
-Use the tabs at the top to navigate the site. The "about" tab has something about me and the making of this site.
+Use the tabs at the top to navigate around. The <a href='/about'>about</a> section has something on me and the site's evolution.
 </p>
 
 <hr>
@@ -47,6 +47,8 @@ Type what you want in the text area below, click <code>send</code>, and I'll rea
 <p><em>
 Note that this is merely simplex communication. I.e. you can send me messages, but I can't send anything back. Of course, if you were to send an email address or similar, I could get back to you. Source code: <a href='https://github.com/joeiddon/simplex'>HTTPS server</a>.
 </em></p>
+
+<hr>
 
 <h3>Coming soon...</h3>
 
