note about difficulty

--- a/projects/javascript/gravity.html
+++ b/projects/javascript/gravity.html
@@ -6,6 +6,8 @@ layout: default
 
 <h2><a href='https://joeiddon.github.io/gravity/'>run the simulation here</a></h2>
 
+<h4>I'd just like to point out briefly that the simulation requires a certain degree of skill to actually place planets into orbits (right velocities etc.). For that reason, I hope to add URL encoding (as I did for the <a href='/projects/javascript/balls'>balls simulation</a>) so that I can pre-setup the positions of the planets to make it simpler to see working. Anyway for now, good luck and enjoy!</h4>
+
 <p>
 This second simulation shares some aspects to my first <a href='https://joeiddon.github.io/projects/javascript/balls'>balls</a> one but instead of the focus on being the collision between balls, this simulation focuses on how balls with different masses interact through gravity.
 </p>
