--- a/tree.html
+++ b/tree.html
@@ -100,7 +100,7 @@
 	│   ├── <a href="./images/thumbnails/">thumbnails</a><br>
 	│   │   ├── <a href="./images/thumbnails/balancing_robot.jpg">balancing_robot.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/ball.png">ball.png</a><br>
-	│   │   ├── <a href="./images/thumbnails/balls.jpg">balls.jpg</a><br>
+	│   │   ├── <a href="./images/thumbnails/balls.png">balls.png</a><br>
 	│   │   ├── <a href="./images/thumbnails/bitcoin.jpg">bitcoin.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/blocks.jpg">blocks.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/chase.jpg">chase.jpg</a><br>
