updated balls post

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -14,7 +14,7 @@ layout: default
   <tr>
     <td>
       <a href='balls'>
-      <img class='project_img' src='/images/thumbnails/balls.jpg'></img>
+      <img class='project_img' src='/images/thumbnails/balls.png'></img>
       </a>
     </td>
     <td>
