--- a/tree.html
+++ b/tree.html
@@ -42,6 +42,8 @@
 	│   │   ├── <a href="./images/balancing_robot/frame.jpg">frame.jpg</a><br>
 	│   │   ├── <a href="./images/balancing_robot/layers.jpg">layers.jpg</a><br>
 	│   │   └── <a href="./images/balancing_robot/lipo.jpg">lipo.jpg</a><br>
+	│   ├── <a href="./images/balls/">balls</a><br>
+	│   │   └── <a href="./images/balls/calculations.jpg">calculations.jpg</a><br>
 	│   ├── <a href="./images/bitcoin/">bitcoin</a><br>
 	│   │   ├── <a href="./images/bitcoin/bottom.jpg">bottom.jpg</a><br>
 	│   │   ├── <a href="./images/bitcoin/front.jpg">front.jpg</a><br>
@@ -222,7 +224,7 @@
 	</p>
 	<p>
 
-27 directories, 162 files
+28 directories, 163 files
 	<br><br>
 	</p>
 	<hr>
