--- a/projects/javascript/simulating_threed.html
+++ b/projects/javascript/simulating_threed.html
@@ -97,7 +97,7 @@ document.addEventListener('keydown', function (e){
 </pre>
 
 <p>Below is the exact code above being run on a canvas, with a DOM id of <code>cnvs</code> (as the code implies).</p>
-<canvas id='cnvs' width='1280' height='720' style='background-color: #FCFCDA;' ></canvas>
+<canvas id='cnvs' style'width: 100%' width='1280' height='720' style='background-color: #FCFCDA;' ></canvas>
 <script>
 var cnvs = document.getElementById('cnvs');
 var ctx = cnvs.getContext('2d');
