new post on waves

--- a/projects/javascript/index.html
+++ b/projects/javascript/index.html
@@ -97,9 +97,16 @@ layout: default
     </td>
   </tr>
   <tr>
+    <!--
     <td>
       <a href='chase'>
       <img class='project_img' src='/images/thumbnails/chase.jpg'></img>
+      </a>
+    </td>
+    -->
+    <td>
+      <a href='waves'>
+      <img class='project_img' src='/images/thumbnails/waves.jpg'></img>
       </a>
     </td>
   </tr>
