--- a/tree.html
+++ b/tree.html
@@ -121,7 +121,8 @@
 	│   │   ├── <a href="./images/thumbnails/snake.jpg">snake.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/terrain.jpg">terrain.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/useless_box.jpg">useless_box.jpg</a><br>
-	│   │   └── <a href="./images/thumbnails/violent_robot_arm.jpg">violent_robot_arm.jpg</a><br>
+	│   │   ├── <a href="./images/thumbnails/violent_robot_arm.jpg">violent_robot_arm.jpg</a><br>
+	│   │   └── <a href="./images/thumbnails/waves.jpg">waves.jpg</a><br>
 	│   ├── <a href="./images/useless_box/">useless_box</a><br>
 	│   │   ├── <a href="./images/useless_box/back.jpg">back.jpg</a><br>
 	│   │   ├── <a href="./images/useless_box/batteries.jpg">batteries.jpg</a><br>
@@ -182,7 +183,8 @@
 	│   │   ├── <a href="./projects/javascript/sierpinski.html">sierpinski.html</a><br>
 	│   │   ├── <a href="./projects/javascript/simulating_threed.html">simulating_threed.html</a><br>
 	│   │   ├── <a href="./projects/javascript/snake.html">snake.html</a><br>
-	│   │   └── <a href="./projects/javascript/terrain.html">terrain.html</a><br>
+	│   │   ├── <a href="./projects/javascript/terrain.html">terrain.html</a><br>
+	│   │   └── <a href="./projects/javascript/waves.html">waves.html</a><br>
 	│   ├── <a href="./projects/other/">other</a><br>
 	│   │   ├── <a href="./projects/other/index.html">index.html</a><br>
 	│   │   └── <a href="./projects/other/useless_box.html">useless_box.html</a><br>
@@ -224,7 +226,7 @@
 	</p>
 	<p>
 
-28 directories, 163 files
+28 directories, 165 files
 	<br><br>
 	</p>
 	<hr>
