added image of controller that I missed before

--- a/club/cars.html
+++ b/club/cars.html
@@ -43,7 +43,11 @@ layout: default
 
 <img src='/images/club/cars/batteries.jpg'></img>
 
-<p>And that pretty much concludes the hardware, it is clear in the next section how we ended up mounting the rest of the components (switch, 9V battery, motor driver, Aduino etc.).</p>
+<p>And that pretty much concludes the cars. It is clear in the next section how we ended up mounting the rest of the components (switch, 9V battery, motor driver, Aduino etc.).</p>
+
+<p>Oh and here's our thrown together RC controller (components explained in the next section).</p>
+
+<img src='/images/club/cars/controller.jpg'></img>
 
 <h3>Software</h3>
 
