coilgun post rev 1

--- a/projects/other/index.html
+++ b/projects/other/index.html
@@ -22,4 +22,11 @@ As with the other pages, click the thumbnails to see what they're about.
       </a>
     </td>
   </tr>
+  <tr>
+    <td>
+      <a href='coilgun'>
+      <img class='project_img' src='/images/thumbnails/coilgun.jpg'></img>
+      </a>
+    </td>
+  </tr>
 <tbody></table>
