--- a/tree.html
+++ b/tree.html
@@ -83,6 +83,19 @@
 	│   │   &nbsp;&nbsp;&nbsp; ├── <a href="./images/club/thumbnails/cars.jpg">cars.jpg</a><br>
 	│   │   &nbsp;&nbsp;&nbsp; ├── <a href="./images/club/thumbnails/hexapod.png">hexapod.png</a><br>
 	│   │   &nbsp;&nbsp;&nbsp; └── <a href="./images/club/thumbnails/snake.jpg">snake.jpg</a><br>
+	│   ├── <a href="./images/coilgun/">coilgun</a><br>
+	│   │   ├── <a href="./images/coilgun/backup/">backup</a><br>
+	│   │   │   ├── <a href="./images/coilgun/backup/IMG_20190602_140212364.jpg">IMG_20190602_140212364.jpg</a><br>
+	│   │   │   ├── <a href="./images/coilgun/backup/IMG_20190602_141216608.jpg">IMG_20190602_141216608.jpg</a><br>
+	│   │   │   ├── <a href="./images/coilgun/backup/IMG_20190602_141405803.jpg">IMG_20190602_141405803.jpg</a><br>
+	│   │   │   ├── <a href="./images/coilgun/backup/IMG_20190602_141633341.jpg">IMG_20190602_141633341.jpg</a><br>
+	│   │   │   ├── <a href="./images/coilgun/backup/IMG_20190602_142008474.jpg">IMG_20190602_142008474.jpg</a><br>
+	│   │   │   └── <a href="./images/coilgun/backup/IMG_20190602_142205349.jpg">IMG_20190602_142205349.jpg</a><br>
+	│   │   ├── <a href="./images/coilgun/breadboard.jpg">breadboard.jpg</a><br>
+	│   │   ├── <a href="./images/coilgun/capacitor.jpg">capacitor.jpg</a><br>
+	│   │   ├── <a href="./images/coilgun/electromagnet.jpg">electromagnet.jpg</a><br>
+	│   │   ├── <a href="./images/coilgun/parallel_capacitors.jpg">parallel_capacitors.jpg</a><br>
+	│   │   └── <a href="./images/coilgun/projectiles.jpg">projectiles.jpg</a><br>
 	│   ├── <a href="./images/laser/">laser</a><br>
 	│   │   ├── <a href="./images/laser/laserbeam.jpg">laserbeam.jpg</a><br>
 	│   │   ├── <a href="./images/laser/laser.jpg">laser.jpg</a><br>
@@ -107,6 +120,7 @@
 	│   │   ├── <a href="./images/thumbnails/blocks.jpg">blocks.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/chase.jpg">chase.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/chess.jpg">chess.jpg</a><br>
+	│   │   ├── <a href="./images/thumbnails/coilgun.jpg">coilgun.jpg</a><br>
 	│   │   ├── <a href="./images/thumbnails/floodfill.png">floodfill.png</a><br>
 	│   │   ├── <a href="./images/thumbnails/game_of_life.png">game_of_life.png</a><br>
 	│   │   ├── <a href="./images/thumbnails/gravity.jpg">gravity.jpg</a><br>
@@ -186,6 +200,7 @@
 	│   │   ├── <a href="./projects/javascript/terrain.html">terrain.html</a><br>
 	│   │   └── <a href="./projects/javascript/waves.html">waves.html</a><br>
 	│   ├── <a href="./projects/other/">other</a><br>
+	│   │   ├── <a href="./projects/other/coilgun.html">coilgun.html</a><br>
 	│   │   ├── <a href="./projects/other/index.html">index.html</a><br>
 	│   │   └── <a href="./projects/other/useless_box.html">useless_box.html</a><br>
 	│   └── <a href="./projects/project.css">project.css</a><br>
@@ -203,6 +218,7 @@
 	│   │   └── <a href="./videos/club/snake_game.mp4">snake_game.mp4</a><br>
 	│   ├── <a href="./videos/balancing_robot.mp4">balancing_robot.mp4</a><br>
 	│   ├── <a href="./videos/chess_setup.mp4">chess_setup.mp4</a><br>
+	│   ├── <a href="./videos/coilgun.mp4">coilgun.mp4</a><br>
 	│   ├── <a href="./videos/laser_gate.mp4">laser_gate.mp4</a><br>
 	│   ├── <a href="./videos/led_grid_test.mp4">led_grid_test.mp4</a><br>
 	│   ├── <a href="./videos/newt_research.mp4">newt_research.mp4</a><br>
@@ -226,7 +242,7 @@
 	</p>
 	<p>
 
-28 directories, 165 files
+30 directories, 179 files
 	<br><br>
 	</p>
 	<hr>
