one more pic in coilgun post

--- a/projects/other/coilgun.html
+++ b/projects/other/coilgun.html
@@ -22,6 +22,10 @@ TODO: wrap units in \mathrm{...} tag (math roman) so they are not italicised (co
 
 <p>After some research, I had a bit more of an idea - all they are comprised of are two very large conductive plates separated by a small distance via an electrolyte. Capacitors store energy via collecting charge on one one of the two plates (unlike inductors which store energy via creating a magnetic field). The charge is stored when a potential difference is applied across the capacitor - an electric potential causes electrons to be pulled in a current from one plate to the other, but since they cannot make it across the dielectric, they deposit on one of the plates, resulting in a <em>difference in charge between the two plates</em>.</p>
 
+<p>I <a href='/images/coilgun/homemade_capacitor.jpg'>tried making one</a> but I would need a much better electrolyte and larger plates to create anything with a meaningful capacitance.</p>
+
+<!-- Styropyro's capacitor thing: https://www.youtube.com/watch?v=1psxE4NlECQ -->
+
 <!--
 <p>[As a bit of a side note, I thought I'd read a bit more about what <a href='http://www.feynmanlectures.caltech.edu/I_14.html#Ch14-S5'>Feynman had to say on the fiels within capacitors</a>. Surpisingly, it wasn't <em>too</em> far out of my grasp. I also enjoyed <a href='https://www.youtube.com/watch?v=QpVxj3XrLgk'>Walter Lewin's Fourth Lecture in his series on electromagnetism</a> which I hoped would get me a bit further along in reading the material Feynamn was writing about.]<p>
 -->
