--- a/tree.html
+++ b/tree.html
@@ -87,6 +87,7 @@
 	│   │   ├── <a href="./images/coilgun/breadboard.jpg">breadboard.jpg</a><br>
 	│   │   ├── <a href="./images/coilgun/capacitor.jpg">capacitor.jpg</a><br>
 	│   │   ├── <a href="./images/coilgun/electromagnet.jpg">electromagnet.jpg</a><br>
+	│   │   ├── <a href="./images/coilgun/homemade_capacitor.jpg">homemade_capacitor.jpg</a><br>
 	│   │   ├── <a href="./images/coilgun/parallel_capacitors.jpg">parallel_capacitors.jpg</a><br>
 	│   │   └── <a href="./images/coilgun/projectiles.jpg">projectiles.jpg</a><br>
 	│   ├── <a href="./images/laser/">laser</a><br>
@@ -235,7 +236,7 @@
 	</p>
 	<p>
 
-29 directories, 173 files
+29 directories, 174 files
 	<br><br>
 	</p>
 	<hr>
